--- a/waybar/config
+++ b/waybar/config
@@ -1,5 +1,5 @@
 {
-    "modules-left": ["sway/workspaces"],
+    "modules-left": ["custom/WSG", "sway/workspaces"],
     "modules-center": ["sway/window"],
     "modules-right": ["pulseaudio", "network", "cpu", "memory", "temperature", "backlight", "sway/language", "battery", "clock", "custom/weather", "custom/notifications", "tray", "custom/power"],
 
@@ -32,7 +32,6 @@
     },
 
     "clock": {
-        "timezone": "Asia/Amman",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         "format-alt": "{:%Y-%m-%d}"
     },
