--- a/sway/config
+++ b/sway/config
@@ -87,38 +87,300 @@ bindsym $mod+Shift+$down move down
 bindsym $mod+Shift+$up move up
 bindsym $mod+Shift+$right move right
 
-bindsym $mod+Alt+1 exec python $HOME/.config/sway/WSG.py WSG 0
-bindsym $mod+Alt+2 exec python $HOME/.config/sway/WSG.py WSG 1
-bindsym $mod+Alt+3 exec python $HOME/.config/sway/WSG.py WSG 2
-bindsym $mod+Alt+4 exec python $HOME/.config/sway/WSG.py WSG 3
-bindsym $mod+Alt+5 exec python $HOME/.config/sway/WSG.py WSG 4
-bindsym $mod+Alt+6 exec python $HOME/.config/sway/WSG.py WSG 5
-bindsym $mod+Alt+7 exec python $HOME/.config/sway/WSG.py WSG 6
-bindsym $mod+Alt+8 exec python $HOME/.config/sway/WSG.py WSG 7
-bindsym $mod+Alt+9 exec python $HOME/.config/sway/WSG.py WSG 8
-bindsym $mod+Alt+0 exec python $HOME/.config/sway/WSG.py WSG 9
+bindsym $mod+0 mode ws0
+bindsym $mod+1 mode ws1
+bindsym $mod+2 mode ws2
+bindsym $mod+3 mode ws3
+bindsym $mod+4 mode ws4
+bindsym $mod+5 mode ws5
+bindsym $mod+6 mode ws6
+bindsym $mod+7 mode ws7
+bindsym $mod+8 mode ws8
+bindsym $mod+9 mode ws9
 
-bindsym $mod+1 exec python $HOME/.config/sway/WSG.py WS 1
-bindsym $mod+2 exec python $HOME/.config/sway/WSG.py WS 2
-bindsym $mod+3 exec python $HOME/.config/sway/WSG.py WS 3
-bindsym $mod+4 exec python $HOME/.config/sway/WSG.py WS 4
-bindsym $mod+5 exec python $HOME/.config/sway/WSG.py WS 5
-bindsym $mod+6 exec python $HOME/.config/sway/WSG.py WS 6
-bindsym $mod+7 exec python $HOME/.config/sway/WSG.py WS 7
-bindsym $mod+8 exec python $HOME/.config/sway/WSG.py WS 8
-bindsym $mod+9 exec python $HOME/.config/sway/WSG.py WS 9
-bindsym $mod+0 exec python $HOME/.config/sway/WSG.py WS 10
 
-bindsym $mod+Shift+1 move container to workspace number 1
-bindsym $mod+Shift+2 move container to workspace number 2
-bindsym $mod+Shift+3 move container to workspace number 3
-bindsym $mod+Shift+4 move container to workspace number 4
-bindsym $mod+Shift+5 move container to workspace number 5
-bindsym $mod+Shift+6 move container to workspace number 6
-bindsym $mod+Shift+7 move container to workspace number 7
-bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
-bindsym $mod+Shift+0 move container to workspace number 10
+bindsym $mod+shift+0 mode cws0
+bindsym $mod+Shift+1 mode cws1
+bindsym $mod+Shift+2 mode cws2
+bindsym $mod+Shift+3 mode cws3
+bindsym $mod+Shift+4 mode cws4
+bindsym $mod+Shift+5 mode cws5
+bindsym $mod+Shift+6 mode cws6
+bindsym $mod+Shift+7 mode cws7
+bindsym $mod+Shift+8 mode cws8
+bindsym $mod+Shift+9 mode cws9
+
+mode "ws0" {
+    bindsym 1 mode default, workspace number 1
+    bindsym 2 mode default, workspace number 2
+    bindsym 3 mode default, workspace number 3
+    bindsym 4 mode default, workspace number 4
+    bindsym 5 mode default, workspace number 5
+    bindsym 6 mode default, workspace number 6
+    bindsym 7 mode default, workspace number 7
+    bindsym 8 mode default, workspace number 8
+    bindsym 9 mode default, workspace number 9
+}
+
+mode "ws1" {
+    bindsym 0 mode default, workspace number 10
+    bindsym 1 mode default, workspace number 11
+    bindsym 2 mode default, workspace number 12
+    bindsym 3 mode default, workspace number 13
+    bindsym 4 mode default, workspace number 14
+    bindsym 5 mode default, workspace number 15
+    bindsym 6 mode default, workspace number 16
+    bindsym 7 mode default, workspace number 17
+    bindsym 8 mode default, workspace number 18
+    bindsym 9 mode default, workspace number 19
+}
+
+
+mode "ws2" {
+    bindsym 0 mode default, workspace number 20
+    bindsym 1 mode default, workspace number 21
+    bindsym 2 mode default, workspace number 22
+    bindsym 3 mode default, workspace number 23
+    bindsym 4 mode default, workspace number 24
+    bindsym 5 mode default, workspace number 25
+    bindsym 6 mode default, workspace number 26
+    bindsym 7 mode default, workspace number 27
+    bindsym 8 mode default, workspace number 28
+    bindsym 9 mode default, workspace number 29
+}
+
+
+mode "ws3" {
+    bindsym 0 mode default, workspace number 30
+    bindsym 1 mode default, workspace number 31
+    bindsym 2 mode default, workspace number 32
+    bindsym 3 mode default, workspace number 33
+    bindsym 4 mode default, workspace number 34
+    bindsym 5 mode default, workspace number 35
+    bindsym 6 mode default, workspace number 36
+    bindsym 7 mode default, workspace number 37
+    bindsym 8 mode default, workspace number 38
+    bindsym 9 mode default, workspace number 39
+}
+
+
+mode "ws4" {
+    bindsym 0 mode default, workspace number 40
+    bindsym 1 mode default, workspace number 41
+    bindsym 2 mode default, workspace number 42
+    bindsym 3 mode default, workspace number 43
+    bindsym 4 mode default, workspace number 44
+    bindsym 5 mode default, workspace number 45
+    bindsym 6 mode default, workspace number 46
+    bindsym 7 mode default, workspace number 47
+    bindsym 8 mode default, workspace number 48
+    bindsym 9 mode default, workspace number 49
+}
+
+
+mode "ws5" {
+    bindsym 0 mode default, workspace number 50
+    bindsym 1 mode default, workspace number 51
+    bindsym 2 mode default, workspace number 52
+    bindsym 3 mode default, workspace number 53
+    bindsym 4 mode default, workspace number 54
+    bindsym 5 mode default, workspace number 55
+    bindsym 6 mode default, workspace number 56
+    bindsym 7 mode default, workspace number 57
+    bindsym 8 mode default, workspace number 58
+    bindsym 9 mode default, workspace number 59
+}
+
+
+mode "ws6" {
+    bindsym 0 mode default, workspace number 60
+    bindsym 1 mode default, workspace number 61
+    bindsym 2 mode default, workspace number 62
+    bindsym 3 mode default, workspace number 63
+    bindsym 4 mode default, workspace number 64
+    bindsym 5 mode default, workspace number 65
+    bindsym 6 mode default, workspace number 66
+    bindsym 7 mode default, workspace number 67
+    bindsym 8 mode default, workspace number 68
+    bindsym 9 mode default, workspace number 69
+}
+
+
+mode "ws7" {
+    bindsym 0 mode default, workspace number 70
+    bindsym 1 mode default, workspace number 71
+    bindsym 2 mode default, workspace number 72
+    bindsym 3 mode default, workspace number 73
+    bindsym 4 mode default, workspace number 74
+    bindsym 5 mode default, workspace number 75
+    bindsym 6 mode default, workspace number 76
+    bindsym 7 mode default, workspace number 77
+    bindsym 8 mode default, workspace number 78
+    bindsym 9 mode default, workspace number 79
+}
+
+
+mode "ws8" {
+    bindsym 0 mode default, workspace number 80
+    bindsym 1 mode default, workspace number 81
+    bindsym 2 mode default, workspace number 82
+    bindsym 3 mode default, workspace number 83
+    bindsym 4 mode default, workspace number 84
+    bindsym 5 mode default, workspace number 85
+    bindsym 6 mode default, workspace number 86
+    bindsym 7 mode default, workspace number 87
+    bindsym 8 mode default, workspace number 88
+    bindsym 9 mode default, workspace number 89
+}
+
+
+mode "ws9" {
+    bindsym 0 mode default, workspace number 90
+    bindsym 1 mode default, workspace number 91
+    bindsym 2 mode default, workspace number 92
+    bindsym 3 mode default, workspace number 93
+    bindsym 4 mode default, workspace number 94
+    bindsym 5 mode default, workspace number 95
+    bindsym 6 mode default, workspace number 96
+    bindsym 7 mode default, workspace number 97
+    bindsym 8 mode default, workspace number 98
+    bindsym 9 mode default, workspace number 99
+}
+
+mode "cws0" {
+    bindsym 1 mode default, move container to workspace number 1
+    bindsym 2 mode default, move container to workspace number 2
+    bindsym 3 mode default, move container to workspace number 3
+    bindsym 4 mode default, move container to workspace number 4
+    bindsym 5 mode default, move container to workspace number 5
+    bindsym 6 mode default, move container to workspace number 6
+    bindsym 7 mode default, move container to workspace number 7
+    bindsym 8 mode default, move container to workspace number 8
+    bindsym 9 mode default, move container to workspace number 9
+}
+
+mode "cws1" {
+    bindsym 0 mode default, move container to workspace number 10
+    bindsym 1 mode default, move container to workspace number 11
+    bindsym 2 mode default, move container to workspace number 12
+    bindsym 3 mode default, move container to workspace number 13
+    bindsym 4 mode default, move container to workspace number 14
+    bindsym 5 mode default, move container to workspace number 15
+    bindsym 6 mode default, move container to workspace number 16
+    bindsym 7 mode default, move container to workspace number 17
+    bindsym 8 mode default, move container to workspace number 18
+    bindsym 9 mode default, move container to workspace number 19
+}
+
+
+mode "cws2" {
+    bindsym 0 mode default, move container to workspace number 20
+    bindsym 1 mode default, move container to workspace number 21
+    bindsym 2 mode default, move container to workspace number 22
+    bindsym 3 mode default, move container to workspace number 23
+    bindsym 4 mode default, move container to workspace number 24
+    bindsym 5 mode default, move container to workspace number 25
+    bindsym 6 mode default, move container to workspace number 26
+    bindsym 7 mode default, move container to workspace number 27
+    bindsym 8 mode default, move container to workspace number 28
+    bindsym 9 mode default, move container to workspace number 29
+}
+
+mode "cws3" {
+    bindsym 0 mode default, move container to workspace number 30
+    bindsym 1 mode default, move container to workspace number 31
+    bindsym 2 mode default, move container to workspace number 32
+    bindsym 3 mode default, move container to workspace number 33
+    bindsym 4 mode default, move container to workspace number 34
+    bindsym 5 mode default, move container to workspace number 35
+    bindsym 6 mode default, move container to workspace number 36
+    bindsym 7 mode default, move container to workspace number 37
+    bindsym 8 mode default, move container to workspace number 38
+    bindsym 9 mode default, move container to workspace number 39
+}
+
+mode "cws4" {
+    bindsym 0 mode default, move container to workspace number 40
+    bindsym 1 mode default, move container to workspace number 41
+    bindsym 2 mode default, move container to workspace number 42
+    bindsym 3 mode default, move container to workspace number 43
+    bindsym 4 mode default, move container to workspace number 44
+    bindsym 5 mode default, move container to workspace number 45
+    bindsym 6 mode default, move container to workspace number 46
+    bindsym 7 mode default, move container to workspace number 47
+    bindsym 8 mode default, move container to workspace number 48
+    bindsym 9 mode default, move container to workspace number 49
+}
+
+
+mode "cws5" {
+    bindsym 0 mode default, move container to workspace number 50
+    bindsym 1 mode default, move container to workspace number 51
+    bindsym 2 mode default, move container to workspace number 52
+    bindsym 3 mode default, move container to workspace number 53
+    bindsym 4 mode default, move container to workspace number 54
+    bindsym 5 mode default, move container to workspace number 55
+    bindsym 6 mode default, move container to workspace number 56
+    bindsym 7 mode default, move container to workspace number 57
+    bindsym 8 mode default, move container to workspace number 58
+    bindsym 9 mode default, move container to workspace number 59
+}
+
+
+mode "cws6" {
+    bindsym 0 mode default, move container to workspace number 60
+    bindsym 1 mode default, move container to workspace number 61
+    bindsym 2 mode default, move container to workspace number 62
+    bindsym 3 mode default, move container to workspace number 63
+    bindsym 4 mode default, move container to workspace number 64
+    bindsym 5 mode default, move container to workspace number 65
+    bindsym 6 mode default, move container to workspace number 66
+    bindsym 7 mode default, move container to workspace number 67
+    bindsym 8 mode default, move container to workspace number 68
+    bindsym 9 mode default, move container to workspace number 69
+}
+
+
+mode "cws7" {
+    bindsym 0 mode default, move container to workspace number 70
+    bindsym 1 mode default, move container to workspace number 71
+    bindsym 2 mode default, move container to workspace number 72
+    bindsym 3 mode default, move container to workspace number 73
+    bindsym 4 mode default, move container to workspace number 74
+    bindsym 5 mode default, move container to workspace number 75
+    bindsym 6 mode default, move container to workspace number 76
+    bindsym 7 mode default, move container to workspace number 77
+    bindsym 8 mode default, move container to workspace number 78
+    bindsym 9 mode default, move container to workspace number 79
+}
+
+
+mode "cws8" {
+    bindsym 0 mode default, move container to workspace number 80
+    bindsym 1 mode default, move container to workspace number 81
+    bindsym 2 mode default, move container to workspace number 82
+    bindsym 3 mode default, move container to workspace number 83
+    bindsym 4 mode default, move container to workspace number 84
+    bindsym 5 mode default, move container to workspace number 85
+    bindsym 6 mode default, move container to workspace number 86
+    bindsym 7 mode default, move container to workspace number 87
+    bindsym 8 mode default, move container to workspace number 88
+    bindsym 9 mode default, move container to workspace number 89
+}
+
+
+mode "cws9" {
+    bindsym 0 mode default, move container to workspace number 90
+    bindsym 1 mode default, move container to workspace number 91
+    bindsym 2 mode default, move container to workspace number 92
+    bindsym 3 mode default, move container to workspace number 93
+    bindsym 4 mode default, move container to workspace number 94
+    bindsym 5 mode default, move container to workspace number 95
+    bindsym 6 mode default, move container to workspace number 96
+    bindsym 7 mode default, move container to workspace number 97
+    bindsym 8 mode default, move container to workspace number 98
+    bindsym 9 mode default, move container to workspace number 99
+}
 
 bindsym $mod+b splith
 bindsym $mod+v splitv
