--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,9 +14,12 @@ strip_trailing_spaces smart
 confirm_os_window_close 0
 clear_all_shortcuts yes
 enable_audio_bell no
+dynamic_background_opacity yes
+listen_on unix:/tmp/kitty
+shell_integration enabled
 
-
-open_url_with firedragon
+open_url_with librewolf
+url_prefixes file ftp ftps gemini git gopher http https irc ircs kitty mailto news sftp ssh
 remember_window_size  yes
 
 foreground #a9b1d6
@@ -69,7 +72,6 @@ url_color #9ece6a
 active_border_color #3d59a1
 inactive_border_color #101014
 bell_border_color #e0af68
-
 # Tab bar
 tab_bar_style fade
 tab_fade 1
@@ -84,6 +86,13 @@ tab_bar_background #101014
 # Title bar
 macos_titlebar_color #16161e
 
+# nvim scrollback
+action_alias kitty_scrollback_nvim kitten /home/artemis-arrow/Git/dotfiles/kitty/kitty_scrollback_nvim.py
+map kitty_mod+h kitty_scrollback_nvim
+map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
+mouse_map kitty_mod+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
+
+
 #keybindings
 map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v paste_from_clipboard
@@ -97,6 +106,3 @@ map ctrl+shift+t new_tab
 map ctrl+shift+right next_tab
 map ctrl+shift+left previous_tab
 map ctrl+shift+/ next_layout
-
-
-
