--- a/waybar/config
+++ b/waybar/config
@@ -1,7 +1,8 @@
 {
-    "modules-left": ["sway/workspaces"],
+    "modules-left": ["sway/workspaces", "sway/mode"],
     "modules-center": ["sway/window"],
-    "modules-right": ["pulseaudio", "network", "cpu", "memory", "temperature", "backlight", "sway/language", "battery", "clock", "custom/weather", "custom/notifications", "tray", "custom/power"],
+    "modules-right": ["pulseaudio", "custom/network_traffic", "cpu", "memory", "temperature", "backlight", "sway/language", "battery", "clock", "custom/weather", "custom/notifications", "tray", "custom/power"],
+    "disable-click": true,
 
     "keyboard-state": {
         "numlock": true,
@@ -21,6 +22,12 @@
     "custom/notifications": {
 	    "format": "󰂚",
 	    "on-click": "swaync-client -t -sw"
+    },
+    "custom/network_traffic": {
+	    "exec": "~/.scripts/network_traffic.sh",
+	    "return-type": "json",
+	    "format-ethernet": "{icon} {ifname} ⇣{bandwidthDownBytes:>4} ⇡{ba
+ndwidthUpBytes:>4}",
     },
 
     "custom/weather": {
@@ -78,18 +85,7 @@
     "custom/power": {
         "format": "⏻",
         "tooltip": false,
-        "on-click": "~/.scripts/power.sh"
-    },
-
-    "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "{signalStrength}% ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
-        "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
-        // "format-alt": "{ifname}: {ipaddr}/{cidr}"
-        "on-click": "sh $HOME/.scripts/wifi.sh"
+        "on-click": "nwgbar"
     },
 
     "pulseaudio": {
