small updates here and there, mainly improving waybar and neovim

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -17,6 +17,7 @@ enable_audio_bell no
 dynamic_background_opacity yes
 listen_on unix:/tmp/kitty
 shell_integration enabled
+allow_remote_control yes
 
 open_url_with librewolf
 url_prefixes file ftp ftps gemini git gopher http https irc ircs kitty mailto news sftp ssh
@@ -87,11 +88,11 @@ tab_bar_background #101014
 macos_titlebar_color #16161e
 
 # nvim scrollback
-action_alias kitty_scrollback_nvim kitten /home/artemis-arrow/Git/dotfiles/kitty/kitty_scrollback_nvim.py
-map kitty_mod+h kitty_scrollback_nvim
-map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
-mouse_map kitty_mod+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
+# default scrollback pager
+scrollback_pager nvim -u NONE -R -M -c 'lua require("page")(INPUT_LINE_NUMBER, CURSOR_LINE, CURSOR_COLUMN)' -  
 
+# launch action (optional `--stdin-add-formatting`)
+map ctrl+shift+h show_scrollback
 
 #keybindings
 map ctrl+shift+c copy_to_clipboard
