--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -3,7 +3,7 @@
 #     multipane: Midnight-commander like multipane view showing all tabs next
 #                to each other
 set viewmode miller
-
+default_linemode devicons
 # How many columns are there, and what are their relative widths?
 set column_ratios 1,3,4
 
