few updates here and there

--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -126,7 +126,7 @@ ext cbz,  has zathura,      X, flag f = zathura -- "$@"
 mime ^image/svg, has inkscape, X, flag f = inkscape -- "$@"
 mime ^image/svg, has display,  X, flag f = display -- "$@"
 
-mime ^image, has ristretto, X, flag f = ristretto "$@"
+mime ^image, has vimiv, X, flag f = vimiv "$@"
 
 #-------------------------------------------
 # Archives
