--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,3 +1,41 @@
+background #1a1b26
+foreground #c0caf5
+selection_background #33467C
+selection_foreground #c0caf5
+url_color #73daca
+cursor #c0caf5
+
+# Tabs
+active_tab_background #7aa2f7
+active_tab_foreground #1f2335
+inactive_tab_background #292e42
+inactive_tab_foreground #545c7e
+#tab_bar_background #15161E
+
+# normal
+color0 #15161E
+color1 #f7768e
+color2 #9ece6a
+color3 #e0af68
+color4 #7aa2f7
+color5 #bb9af7
+color6 #7dcfff
+color7 #a9b1d6
+
+# bright
+color8 #414868
+color9 #f7768e
+color10 #9ece6a
+color11 #e0af68
+color12 #7aa2f7
+color13 #bb9af7
+color14 #7dcfff
+color15 #c0caf5
+
+# extended colors
+color16 #ff9e64
+color17 #db4b4b
+
 font_family           JetBrains Mono NL Regular Nerd Font Complete Mono
 bold_font             JetBrains Mono NL Bold Nerd Font Complete
 italic_font           JetBrains Mono NL Italic Nerd Font Complete Mono
@@ -5,7 +43,7 @@ bold_italic_font      JetBrains Mono NL Bold Italic Nerd Font Complete Mono
 disable_ligatures never
 font_size 9.0
 background_opacity 0.7
-cursor #2596BE
+# cursor #2596BE
 cursor_shape beam
 cursor_blink_interval 0
 disable_ligatures never
@@ -18,78 +56,28 @@ dynamic_background_opacity yes
 listen_on unix:/tmp/kitty
 shell_integration enabled
 allow_remote_control yes
+enabled_layouts splits
+tab_bar_min_tabs 1
 
 open_url_with librewolf
 url_prefixes file ftp ftps gemini git gopher http https irc ircs kitty mailto news sftp ssh
 remember_window_size  yes
 
-foreground #a9b1d6
-background #1a1b26
-
-# Black
-color0 #414868
-color8 #414868
-
-# Red
-color1 #f7768e
-color9 #f7768e
-
-# Green
-color2  #73daca
-color10 #73daca
-
-# Yellow
-color3  #e0af68
-color11 #e0af68
-
-# Blue
-color4  #7aa2f7
-color12 #7aa2f7
-
-# Magenta
-color5  #bb9af7
-color13 #bb9af7
-
-# Cyan
-color6  #7dcfff
-color14 #7dcfff
-
-# White
-color7  #c0caf5
-color15 #c0caf5
-
-# Cursor
-cursor #c0caf5
-cursor_text_color #1a1b26
-
-# Selection highlight
-selection_foreground none
-selection_background #28344a
-
-# The color for highlighting URLs on mouse-over
-url_color #9ece6a
-
-# Window borders
-active_border_color #3d59a1
-inactive_border_color #101014
-bell_border_color #e0af68
 # Tab bar
-tab_bar_style fade
-tab_fade 1
-active_tab_foreground   #3d59a1
-active_tab_background   #16161e
-active_tab_font_style   bold
-inactive_tab_foreground #787c99
-inactive_tab_background #16161e
-inactive_tab_font_style bold
-tab_bar_background #101014
+tab_bar_edge bottom
+tab_bar_margin_height 5.0 0.0
+tab_bar_style custom
+tab_powerline_style round
+# tab_bar_background #1a1b26
+tab_title_template "{fmt.fg.default}{index}"
+tab_bar_edge top
 
 # Title bar
-macos_titlebar_color #16161e
+# macos_titlebar_color #16161e
 
 # nvim scrollback
 # default scrollback pager
-scrollback_pager nvim -u NONE -R -M -c 'lua require("page")(INPUT_LINE_NUMBER, CURSOR_LINE, CURSOR_COLUMN)' -  
+scrollback_pager nvim -u NONE -R -M -c 'lua dofile("/home/artemis-arrow/.config/kitty/page.lua")(INPUT_LINE_NUMBER, CURSOR_LINE, CURSOR_COLUMN)' -  
 
 # launch action (optional `--stdin-add-formatting`)
 map ctrl+shift+h show_scrollback
@@ -97,13 +85,13 @@ map ctrl+shift+h show_scrollback
 #keybindings
 map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v paste_from_clipboard
-map ctrl+j scroll_line_down
-map ctrl+k scroll_line_up
-map ctrl+shift+n new_window
+map ctrl+down scroll_line_down
+map ctrl+up scroll_line_up
 map ctrl+shift+j next_window
 map ctrl+shift+k previous_window
+map ctrl+h launch --location=hsplit
+map ctrl+v launch --location=vsplit
 map ctrl+shift+r start_resizing_window
 map ctrl+shift+t new_tab
 map ctrl+shift+right next_tab
 map ctrl+shift+left previous_tab
-map ctrl+shift+/ next_layout
