--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -95,7 +95,7 @@ set draw_borders both
 set dirname_in_tabs false
 
 # Enable the mouse support?
-set mouse_enabled true
+set mouse_enabled false
 
 # Display the file size in the main column or status bar?
 set display_size_in_main_column true
@@ -118,7 +118,7 @@ set update_tmux_title false
 set shorten_title 3
 
 # Show hostname in titlebar?
-set hostname_in_titlebar true
+set hostname_in_titlebar false
 
 # Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
 set tilde_in_titlebar true
@@ -173,7 +173,7 @@ set xterm_alt_key false
 set cd_bookmarks true
 
 # Changes case sensitivity for the cd command tab completion
-set cd_tab_case sensitive
+set cd_tab_case insensitive
 
 # Use fuzzy tab completion with the "cd" command. For example,
 # ":cd /u/lo/b<tab>" expands to ":cd /usr/local/bin".
@@ -212,7 +212,7 @@ set line_numbers relative
 set relative_current_zero false
 
 # Start line numbers from 1 instead of 0
-set one_indexed false
+set one_indexed true
 
 # Save tabs on exit
 set save_tabs_on_exit false
@@ -313,16 +313,6 @@ map cd console cd%space
 
 map <C-p> chain console; eval fm.ui.console.history_move(-1)
 
-# Change the line mode
-map Mf linemode filename
-map Mi linemode fileinfo
-map Mm linemode mtime
-map Mh linemode humanreadablemtime
-map Mp linemode permissions
-map Ms linemode sizemtime
-map MH linemode sizehumanreadablemtime
-map Mt linemode metatitle
-
 # Tagging / Marking
 map t       tag_toggle
 map ut      tag_remove
@@ -332,31 +322,6 @@ map v       mark_files all=True toggle=True
 map uv      mark_files all=True val=False
 map V       toggle_visual_mode
 map uV      toggle_visual_mode reverse=True
-
-# For the nostalgics: Midnight Commander bindings
-map <F1> help
-map <F2> rename_append
-map <F3> display_file
-map <F4> edit
-map <F5> copy
-map <F6> cut
-map <F7> console mkdir%space
-map <F8> console delete
-#map <F8> console trash
-map <F10> exit
-
-# In case you work on a keyboard with dvorak layout
-map <UP>       move up=1
-map <DOWN>     move down=1
-map <LEFT>     move left=1
-map <RIGHT>    move right=1
-map <HOME>     move to=0
-map <END>      move to=-1
-map <PAGEDOWN> move down=1   pages=True
-map <PAGEUP>   move up=1     pages=True
-map <CR>       move right=1
-#map <DELETE>   console delete
-map <INSERT>   console touch%space
 
 # VIM-like
 copymap <UP>       k
@@ -381,24 +346,6 @@ map [     move_parent -1
 map }     traverse
 map {     traverse_backwards
 map )     jump_non
-
-map gh cd ~
-map ge cd /etc
-map gu cd /usr
-map gd cd /dev
-map gl cd -r .
-map gL cd -r %f
-map go cd /opt
-map gv cd /var
-map gm cd /media
-map gi eval fm.cd('/run/media/' + os.getenv('USER'))
-map gM cd /mnt
-map gs cd /srv
-map gp cd /tmp
-map gr cd /
-map gR eval fm.cd(ranger.RANGERDIR)
-map g/ cd /
-map g? cd /usr/share/doc/ranger
 
 # External Programs
 map E  edit
@@ -430,7 +377,6 @@ map p`<any> paste dest=%any_path
 map p'<any> paste dest=%any_path
 
 map dD console delete
-map dT console trash
 
 map dd cut
 map ud uncut
@@ -458,12 +404,6 @@ map yk  eval fm.copy(dirarg=dict(up=1), narg=quantifier)
 map /  console search%space
 map n  search_next
 map N  search_next forward=False
-map ct search_next order=tag
-map cs search_next order=size
-map ci search_next order=mimetype
-map cc search_next order=ctime
-map cm search_next order=mtime
-map ca search_next order=atime
 
 # Tabs
 map <C-n>     tab_new
@@ -489,26 +429,6 @@ map <a-9>     tab_open 9
 map <a-r>     tab_shift 1
 map <a-l>     tab_shift -1
 
-# Sorting
-map or set sort_reverse!
-map oz set sort=random
-map os chain set sort=size;      set sort_reverse=False
-map ob chain set sort=basename;  set sort_reverse=False
-map on chain set sort=natural;   set sort_reverse=False
-map om chain set sort=mtime;     set sort_reverse=False
-map oc chain set sort=ctime;     set sort_reverse=False
-map oa chain set sort=atime;     set sort_reverse=False
-map ot chain set sort=type;      set sort_reverse=False
-map oe chain set sort=extension; set sort_reverse=False
-
-map oS chain set sort=size;      set sort_reverse=True
-map oB chain set sort=basename;  set sort_reverse=True
-map oN chain set sort=natural;   set sort_reverse=True
-map oM chain set sort=mtime;     set sort_reverse=True
-map oC chain set sort=ctime;     set sort_reverse=True
-map oA chain set sort=atime;     set sort_reverse=True
-map oT chain set sort=type;      set sort_reverse=True
-map oE chain set sort=extension; set sort_reverse=True
 
 map dc get_cumulative_size
 
@@ -520,13 +440,7 @@ map <C-h> set show_hidden!
 copymap <C-h> <backspace>
 copymap <backspace> <backspace2>
 map zI    set flushinput!
-map zi    set preview_images!
-map zm    set mouse_enabled!
-map zp    set preview_files!
-map zP    set preview_directories!
-map zs    set sort_case_insensitive!
 map zu    set autoupdate_cumulative_size!
-map zv    set use_preview_script!
 map zf    console filter%space
 copymap zf zz
 map <C-d> shell ripdrag %p -xa
