--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -60,10 +60,7 @@ ext x?html?, has librewolf,          X, flag f = librewolf -- "$@"
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
-mime ^text,  label editor = nvim "$@"
-mime ^text,  label pager  = "$PAGER" -- "$@"
-!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = nvim "$@"
-!mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = more -- "$@"
+mime ^text = kitty @ set-background-opacity 1 && nvim "$@" && kitty @ set-background-opacity $(pgrep -x nvim > /dev/null && echo 1 || echo 0.7)
 
 ext 1                         = man "$1"
 ext s[wmf]c, has zsnes, X     = zsnes "$1"
