few updates here and there

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -77,7 +77,7 @@ tab_bar_edge top
 
 # nvim scrollback
 # default scrollback pager
-scrollback_pager nvim -u NONE -R -M -c 'lua dofile("/home/artemis-arrow/.config/kitty/page.lua")(INPUT_LINE_NUMBER, CURSOR_LINE, CURSOR_COLUMN)' -  
+scrollback_pager nvim -u NONE -R -M -c 'lua dofile("$HOME/.config/kitty/page.lua")(INPUT_LINE_NUMBER, CURSOR_LINE, CURSOR_COLUMN)' -  
 
 # launch action (optional `--stdin-add-formatting`)
 map ctrl+shift+h show_scrollback
@@ -92,6 +92,6 @@ map ctrl+shift+k previous_window
 map ctrl+h launch --location=hsplit
 map ctrl+v launch --location=vsplit
 map ctrl+shift+r start_resizing_window
-map ctrl+shift+t new_tab
+map ctrl+shift+t new_tab_with_cwd
 map ctrl+shift+right next_tab
 map ctrl+shift+left previous_tab
