--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,4 @@
-background #1a1b26
+background #1a1b27
 foreground #c0caf5
 selection_background #33467C
 selection_foreground #c0caf5
@@ -36,10 +36,10 @@ color15 #c0caf5
 color16 #ff9e64
 color17 #db4b4b
 
-font_family           JetBrains Mono NL Regular Nerd Font Complete Mono
-bold_font             JetBrains Mono NL Bold Nerd Font Complete
-italic_font           JetBrains Mono NL Italic Nerd Font Complete Mono
-bold_italic_font      JetBrains Mono NL Bold Italic Nerd Font Complete Mono
+font_family           JetBrainsMono NF
+bold_font             JetBrainsMono NF Bold
+italic_font           JetBrainsMono NF Italic
+bold_italic_font      JetBrainsMono NF Bold Italic
 disable_ligatures never
 font_size 9.0
 background_opacity 0.7
@@ -59,7 +59,7 @@ allow_remote_control yes
 enabled_layouts splits
 tab_bar_min_tabs 1
 
-open_url_with librewolf
+open_url_with zen-browser
 url_prefixes file ftp ftps gemini git gopher http https irc ircs kitty mailto news sftp ssh
 remember_window_size  yes
 
@@ -80,18 +80,15 @@ tab_bar_edge top
 scrollback_pager nvim -u NONE -R -M -c 'lua dofile("$HOME/.config/kitty/page.lua")(INPUT_LINE_NUMBER, CURSOR_LINE, CURSOR_COLUMN)' -  
 
 # launch action (optional `--stdin-add-formatting`)
-map ctrl+shift+h show_scrollback
+map alt+h show_scrollback
 
 #keybindings
 map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v paste_from_clipboard
-map ctrl+down scroll_line_down
-map ctrl+up scroll_line_up
-map ctrl+shift+j next_window
-map ctrl+shift+k previous_window
-map ctrl+h launch --location=hsplit
-map ctrl+v launch --location=vsplit
-map ctrl+shift+r start_resizing_window
-map ctrl+shift+t new_tab_with_cwd
-map ctrl+shift+right next_tab
-map ctrl+shift+left previous_tab
+map alt+j next_window
+map alt+k previous_window
+map ctrl+alt+h launch --location=hsplit
+map ctrl+alt+v launch --location=vsplit
+map alt+t new_tab_with_cwd
+map alt+right next_tab
+map alt+left previous_tab
