--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -1,66 +1,5 @@
-# vim: ft=cfg
-#
-# This is the configuration file of "rifle", ranger's file executor/opener.
-# Each line consists of conditions and a command.  For each line the conditions
-# are checked and if they are met, the respective command is run.
-#
-# Syntax:
-#   <condition1> , <condition2> , ... = command
-#
-# The command can contain these environment variables:
-#   $1-$9 | The n-th selected file
-#   $@    | All selected files
-#
-# If you use the special command "ask", rifle will ask you what program to run.
-#
-# Prefixing a condition with "!" will negate its result.
-# These conditions are currently supported:
-#   match <regexp> | The regexp matches $1
-#   ext <regexp>   | The regexp matches the extension of $1
-#   mime <regexp>  | The regexp matches the mime type of $1
-#   name <regexp>  | The regexp matches the basename of $1
-#   path <regexp>  | The regexp matches the absolute path of $1
-#   has <program>  | The program is installed (i.e. located in $PATH)
-#   env <variable> | The environment variable "variable" is non-empty
-#   file           | $1 is a file
-#   directory      | $1 is a directory
-#   number <n>     | change the number of this command to n
-#   terminal       | stdin, stderr and stdout are connected to a terminal
-#   X              | A graphical environment is available (darwin, Xorg, or Wayland)
-#
-# There are also pseudo-conditions which have a "side effect":
-#   flag <flags>  | Change how the program is run. See below.
-#   label <label> | Assign a label or name to the command so it can
-#                 | be started with :open_with <label> in ranger
-#                 | or `rifle -p <label>` in the standalone executable.
-#   else          | Always true.
-#
-# Flags are single characters which slightly transform the command:
-#   f | Fork the program, make it run in the background.
-#     |   New command = setsid $command >& /dev/null &
-#   r | Execute the command with root permissions
-#     |   New command = sudo $command
-#   t | Run the program in a new terminal.  If $TERMCMD is not defined,
-#     | rifle will attempt to extract it from $TERM.
-#     |   New command = $TERMCMD -e $command
-# Note: The "New command" serves only as an illustration, the exact
-# implementation may differ.
-# Note: When using rifle in ranger, there is an additional flag "c" for
-# only running the current file even if you have marked multiple files.
-
-#-------------------------------------------
-# Websites
-#-------------------------------------------
-# Rarely installed browsers get higher priority; It is assumed that if you
-# install a rare browser, you probably use it.  Firefox/konqueror/w3m on the
-# other hand are often only installed as fallback browsers
-ext x?html?, has librewolf,          X, flag f = librewolf -- "$@"
-
-#-------------------------------------------
-# Misc
-#-------------------------------------------
-# Define the "editor" for text files as first action
-mime ^text = kitty @ set-background-opacity 1 && nvim "$@" && kitty @ set-background-opacity $(pgrep -x nvim > /dev/null && echo 1 || echo 0.7)
+ext x?html?, has floorp,          X, flag f = floorp -- "$@"
+mime ^text = nvim "$@"
 
 ext 1                         = man "$1"
 ext s[wmf]c, has zsnes, X     = zsnes "$1"
@@ -83,26 +22,21 @@ ext php = php -- "$1"
 # Audio without X
 #-------------------------------------------
 mime ^audio|ogg$, terminal, has mpv      = mpv -- "$@"
-mime ^audio|ogg$, terminal, has mplayer2 = mplayer2 -- "$@"
-mime ^audio|ogg$, terminal, has mplayer  = mplayer -- "$@"
 ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
 
 #--------------------------------------------
 # Video/Audio with a GUI
 #-------------------------------------------
-mime ^video|audio, has vlc,      X, flag f = vlc -- "$@"
+mime ^video|audio, has mpv,      X, flag f = mpv -- "$@"
 
 #--------------------------------------------
 # Video without X
 #-------------------------------------------
 mime ^video, terminal, !X, has mpv       = mpv -- "$@"
-mime ^video, terminal, !X, has mplayer2  = mplayer2 -- "$@"
-mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 
 #-------------------------------------------
 # Documents
 #-------------------------------------------
-ext pdf, has zathura,  X, flag f = zathura -- "$@"
 
 ext docx?, has catdoc,       terminal = catdoc -- "$@" | "$PAGER"
 
@@ -116,6 +50,7 @@ ext djvu, has zathura,X, flag f = zathura -- "$@"
 ext epub, has zathura,      X, flag f = zathura -- "$@"
 ext cbr,  has zathura,      X, flag f = zathura -- "$@"
 ext cbz,  has zathura,      X, flag f = zathura -- "$@"
+ext pdf, has zathura,  X, flag f = zathura -- "$@"
 
 #-------------------------------------------
 # Images
@@ -123,7 +58,7 @@ ext cbz,  has zathura,      X, flag f = zathura -- "$@"
 mime ^image/svg, has inkscape, X, flag f = inkscape -- "$@"
 mime ^image/svg, has display,  X, flag f = display -- "$@"
 
-mime ^image, has vimiv, X, flag f = vimiv "$@"
+mime ^image, X, flag f = imv "$@"
 
 #-------------------------------------------
 # Archives
@@ -152,35 +87,15 @@ ext rar, has unrar = for file in "$@"; do unrar x "$file"; done
 # Fonts
 #-------------------------------------------
 mime ^font, has fontforge, X, flag f = fontforge "$@"
-
 #-------------------------------------------
-# Flag t fallback terminals
+#Terminal
 #-------------------------------------------
-# Rarely installed terminal emulators get higher priority; It is assumed that
-# if you install a rare terminal emulator, you probably use it.
-# gnome-terminal/konsole/xterm on the other hand are often installed as part of
-# a desktop environment or as fallback terminal emulators.
 mime ^ranger/x-terminal-emulator, has kitty = kitty -- "$@"
-
-#-------------------------------------------
-# Misc
-#-------------------------------------------
-label wallpaper, number 11, mime ^image, has feh, X = feh --bg-scale "$1"
-label wallpaper, number 12, mime ^image, has feh, X = feh --bg-tile "$1"
-label wallpaper, number 13, mime ^image, has feh, X = feh --bg-center "$1"
-label wallpaper, number 14, mime ^image, has feh, X = feh --bg-fill "$1"
-
 #-------------------------------------------
 # Generic file openers
 #-------------------------------------------
-label open, has xdg-open = xdg-open -- "$@"
+label open,  = nvim "$@"
 label open, has open     = open -- "$@"
-
-# Define the editor for non-text files + pager as last action
-              !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = ask
-label editor, !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = ${VISUAL:-$EDITOR} -- "$@"
-label pager,  !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = "$PAGER" -- "$@"
-
 
 ######################################################################
 # The actions below are left so low down in this file on purpose, so #
@@ -189,7 +104,3 @@ label pager,  !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = "$PAGER" 
 
 # Execute a file as program/script.
 mime application/x-executable = "$1"
-
-# Move the file to trash using trash-cli.
-label trash, has trash-put = trash-put -- "$@"
-label trash = mkdir -p -- ${XDG_DATA_DIR:-$HOME/.ranger}/ranger-trash; mv -- "$@" ${XDG_DATA_DIR:-$HOME/.ranger}/ranger-trash
