quite a few changes

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -14,7 +14,7 @@ set vcs_backend_bzr disabled
 set vcs_backend_svn disabled
 set vcs_msg_length 50
 set preview_images true
-set preview_images_method kitty
+set preview_images_method iterm2
 set unicode_ellipsis false
 set bidi_support false
 set show_hidden_bookmarks true
