--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -90,7 +90,7 @@ mime ^font, has fontforge, X, flag f = fontforge "$@"
 #-------------------------------------------
 #Terminal
 #-------------------------------------------
-mime ^ranger/x-terminal-emulator, has kitty = kitty -- "$@"
+mime ^ranger/x-terminal-emulator, has wezterm = wezterm -- "$@"
 #-------------------------------------------
 # Generic file openers
 #-------------------------------------------
